<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_ground_truth_mode"
        android:textColor="@color/background_material_dark"
        android:textSize="@dimen/abc_text_size_title_material_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/ground_solution_mode" />

        <Spinner
            android:id="@+id/residual_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/residual_options"
            android:gravity="end"
            android:spinnerMode="dialog"></Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/latitude_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_in_degrees"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/longitude_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitude_in_degrees"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/altitude_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/altitude_in_meters"
        android:inputType="numberDecimal|numberSigned" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popup_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/popup_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>